--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "fast-querystring": "^1.1.2",
     "md5-hash": "^1.0.1",
     "vue": "^3.3.11",
     "vue-cookies": "^1.8.3"
